--- a/src/sass/_imports.sass
+++ b/src/sass/_imports.sass
@@ -1,6 +1,5 @@
 $global-link-color: #DA7D02
-@import "uikit/src/scss/variables-theme.scss";
-@import "uikit/src/scss/mixins-theme.scss";
-@mixin hook-card()
-  color: #000
-@import "uikit/src/scss/uikit-theme.scss";
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,700&display=swap')
+@import "uikit/src/scss/variables-theme.scss"
+@import "uikit/src/scss/mixins-theme.scss"
+@import "uikit/src/scss/uikit-theme.scss"
