--- a/src/sass/custom.sass
+++ b/src/sass/custom.sass
@@ -1,1 +1,17 @@
-@import "imports";
+@import "variables"
+#mobile-menu
+  .uk-nav-primary
+    li
+      a
+        font-size: 1.3rem
+.router-link-exact-active.router-link-active
+  color: #fff !important
+.menu
+  border-top: 5px solid $global-primary-background
+.menu-icon
+  color: $global-primary-background !important
+.main-menu
+  background: linear-gradient(0, #e0e0e0, transparent)
+  border-bottom: 1px solid #fafafa
+
+@import "imports"
