pagina lista postagens do blog

--- a/src/sass/_variables.sass
+++ b/src/sass/_variables.sass
@@ -4,3 +4,4 @@ $offcanvas-overlay-background: rgba(0,0,0,0.6) !default
 $offcanvas-bar-width: 320px !default
 $global-font-family: 'Montserrat', sans-serif
 $navbar-nav-item-font-size: 1.3rem
+$base-hr-border-width: 5px !default
